# pinboard

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.claude/commands/: pinboard.md
.github/workflows/: digest.yml
src/pinboard/: __init__.py  channels.py  cli.py  config.py  connections.py  db.py  digest.py  embeddings.py  events.py  output.py  pins.py  scoring.py  skills.py  streams.py
tests/: conftest.py  test_connections.py  test_edit.py  test_output.py  test_pins.py  test_scoring.py
